--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <h4>Biodegradable Plates</h4>
                 <p style="text-align: justify;">Stubble plates combine environmental consciousness with aesthetic appeal, making them a popular choice for 
                   eco-conscious consumers and those looking for unique dinnerware options.</p>
-                <a href="services.html" class="filled-button">Read More</a>
+                <a href="marketplace.html" class="filled-button">Visit Marketplace</a>
               </div>
             </div>
           </div>
@@ -238,7 +238,7 @@
                 <h4>Bedding for Cattle</h4>
                 <p style="text-align: justify;">Stubble as cattle bedding enhances comfort, reduces waste, and promotes healthier animals. Additionally, 
                   it contributes to soil health through natural decomposition and nutrient recycling.</p>
-                <a href="services.html" class="filled-button">Read More</a>
+                <a href="marketplace.html" class="filled-button">Visit Marketplace</a>
               </div>
             </div>
           </div>
@@ -249,7 +249,7 @@
                 <h4>Carry Bags</h4>
                 <p style="text-align: justify;">These are eco-friendly bags crafted from biodegradable stubble fibers, promoting sustainability while also
                    reducing environmental impact and waste. These are as strong as regular bags.</p>
-                <a href="services.html" class="filled-button">Read More</a>
+                <a href="marketplace.html" class="filled-button">Visit Marketplace</a>
               </div>
             </div>
           </div>
