--- a/login.html
+++ b/login.html
@@ -137,8 +137,8 @@
               <div class="login-form">
                   <form action="" method="post">
                       <div class="form-group">
-                          <label for="email">Email address</label>
-                          <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                          <label for="Mobile Number">Mobile Number</label>
+                          <input type="text" class="form-control" id="number" placeholder="Enter Your Mobile Number" required>
                       </div>
                       <div class="form-group">
                           <label for="password">Password</label>
@@ -318,40 +318,3 @@
 
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
