--- a/register.html
+++ b/register.html
@@ -172,6 +172,11 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <label for="Password">Password:</label>
+                                    <input type="password" class="form-control" id="password" name="password" required>
+                                </div>
+
+                                <div class="form-group">
                                     <label for="duration">Duration (in days):</label>
                                     <input type="number" class="form-control" id="duration" name="duration" required>
                                 </div>
