--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <div class="col-md-4">
             <ul class="right-icons">
               <l1 style="font-weight: bold; color: white;">Meet the Creators</l1>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
@@ -233,15 +233,16 @@
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service2.png" alt="">
+              <img src="assets/images/service4.png" alt="">
               <div class="down-content">
-                <h4>Bedding for Cattle</h4>
-                <p style="text-align: justify;">Stubble as cattle bedding enhances comfort, reduces waste, and promotes healthier animals. Additionally, 
-                  it contributes to soil health through natural decomposition and nutrient recycling.</p>
+                <h4>Biofuel Production</h4>
+                <p style="text-align: justify;">Stubble can be processed into biofuels or used as feedstock for biogas production. 
+                  Utilizing stubble for biofuel production reduces reliance on fossil fuels and helps mitigate greenhouse gas emissions.</p>
                 <a href="marketplace.html" class="filled-button">Visit Marketplace</a>
               </div>
             </div>
           </div>
+          
           <div class="col-md-4">
             <div class="service-item">
               <img src="assets/images/service3.png" alt="">
@@ -466,10 +467,10 @@
             <h4>EcoParali</h4>
             <p>Transformers of Stubble into Tomorrow's Resources</p>
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
