--- a/services.html
+++ b/services.html
@@ -47,10 +47,10 @@
           <div class="col-md-4">
             <ul class="right-icons">
               <l1 style="font-weight: bold; color: white;">Meet the Creators</l1>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
@@ -114,7 +114,7 @@
               <li><a href='#tabs-1'>For Companies<i class="fa fa-angle-right"></i></a></li>
               
               <li><a href='#tabs-3'>For Government <i class="fa fa-angle-right"></i></a></li>
-              <li><a href='#tabs-4'>For Buyers <i class="fa fa-angle-right"></i></a></li>
+              <li><a href='#tabs-4'>For Eco-Friendly Enthusiasts <i class="fa fa-angle-right"></i></a></li>
             </ul>
           </div>
           <div class="col-md-8">
@@ -192,7 +192,7 @@
               </article>
               <article id='tabs-4'>
                 <img src="assets/images/s4.png" alt="">
-                <h4>For  Buyers</h4>
+                <h4>For  Eco-Friendly  Enthusiasts</h4>
                 <p>EcoParali provides a marketplace where consumers can easily purchase eco-friendly products made from stubble, such as biofuels,
                    organic fertilizers, and animal bedding. Our user-friendly online platform allows consumers to browse and buy products conveniently, 
                    with detailed descriptions, customer reviews, and secure payment options. By purchasing products made from stubble, consumers 
@@ -263,10 +263,10 @@
             <h4>EcoParali</h4>
             <p>Transformers of Stubble into Tomorrow's Resources</p>
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
