--- a/whatwedo.html
+++ b/whatwedo.html
@@ -46,10 +46,10 @@
           <div class="col-md-4">
             <ul class="right-icons">
               <l1 style="font-weight: bold; color: white;">Meet the Creators</l1>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
@@ -230,10 +230,10 @@
             <h4>EcoParali</h4>
             <p>Transformers of Stubble into Tomorrow's Resources</p>
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
