--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
           <div class="col-md-4">
             <ul class="right-icons">
               <l1 style="font-weight: bold; color: white;">Meet the Creators</l1>
-              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
         </div>
@@ -249,21 +249,21 @@
             <h4>EcoParali</h4>
             <p>Transformers of Stubble into Tomorrow's Resources</p>
             <ul class="social-icons">
-              <li><a href="https://www.linkedin.com/in/juhi-pathak/"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/juhi-pathak/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ijaiswalshivam/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/tanishka-saraswat-65aa19229/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/aditi-kumari-7a08b3251/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
-              <li><a href="https://www.news18.com/news/india/what-is-parali-a-look-at-delhi-air-pollutions-biggest-contributor-4295951.html">
+              <li><a href="https://www.news18.com/news/india/what-is-parali-a-look-at-delhi-air-pollutions-biggest-contributor-4295951.html" target="_blank">
                 Biggest Air Polluter</a></li>
-              <li><a href="https://hortharyana.gov.in/en/stubble-burning">Stubble Burning</a></li>
-              <li><a href="https://caqm.nic.in/WriteReadData/LINKS/Parali%20-%20Ek%20Punjia9143149-97a5-4fff-b321-b31eed2a8133.pdf">
+              <li><a href="https://hortharyana.gov.in/en/stubble-burning" target="_blank">Stubble Burning</a></li>
+              <li><a href="https://caqm.nic.in/WriteReadData/LINKS/Parali%20-%20Ek%20Punjia9143149-97a5-4fff-b321-b31eed2a8133.pdf" target="_blank">
                 Parali - A Treasure</a></li>
-              <li><a href="https://pib.gov.in/PressReleasePage.aspx?PRID=1779712">Reducing Pollution due<br>to Stubble Burning</a></li>
+              <li><a href="https://pib.gov.in/PressReleasePage.aspx?PRID=1779712" target="_blank">Reducing Pollution due<br>to Stubble Burning</a></li>
               
             </ul>
           </div>
@@ -309,6 +309,7 @@
         </div>
       </div>
     </footer>
+   
     
     <div class="sub-footer">
       <div class="container">
