--- a/companyprofile.html
+++ b/companyprofile.html
@@ -268,12 +268,12 @@
                                     <div class="form-group">
                                         <label class="form-label">Frequency of Requirement</label>
                                         <select class="custom-select">
-                                        <option>One-time</option> <option>Monthly</option> <option>Qarterly</option> <option>Annually</option></select>
+                                        <option>One-time</option> <option>Monthly</option> <option>Quarterly</option> <option>Annually</option></select>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">Preferred Stubble Condition</label>
                                         <select class="custom-select">
-                                        <option>Fresh</option> <option>Dried</option> <option>Processed</option> <option>Annually</option></select>
+                                        <option>Fresh</option> <option>Dried</option> <option>Processed</option> </select>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">Intended Use of Stubble</label>
