--- a/farmerprofile.html
+++ b/farmerprofile.html
@@ -135,15 +135,15 @@
                                 <div class="card-body">
                                     <div class="form-group">
                                         <label class="form-label">Name</label>
-                                        <input type="text" class="form-control mb-1" placeholder="Enter Username">
+                                        <input type="text" class="form-control mb-1" placeholder="Enter Your Name">
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">Father's Name</label>
-                                        <input type="text" class="form-control mb-1" placeholder="Enter Username">
+                                        <input type="text" class="form-control mb-1" placeholder="Enter Father's Name">
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">Contact Number</label>
-                                        <input type="text" class="form-control" placeholder="Enter name of your Company">
+                                        <input type="text" class="form-control" placeholder="Enter your phone number">
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">State</label>
@@ -175,7 +175,7 @@
                                     <div class="form-group">
                                         <label class="form-label">Type of Crop</label>
                                         <select class="custom-select">
-                                        <option>Kharif</option> <option>Rabi</option> <option>Zaid</option> <option>Annually</option></select>
+                                        <option>Kharif</option> <option>Rabi</option> <option>Zaid</option> </select>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">Land Area (in acres)</label>
@@ -189,7 +189,7 @@
                                     <div class="form-group">
                                         <label class="form-label">Identification Proof Type</label>
                                         <select class="custom-select">
-                                            <option>Aadhar Card</option> <option>Voter ID</option> <option>Ration Card</option><option>Other</option> <option>Annually</option></select>
+                                            <option>Aadhar Card</option> <option>Voter ID</option> <option>Ration Card</option><option>Other</option> </select>
                                     </div>
                                     <div class="card-body media align-items-center">
                                         <img src="https://bootdey.com/img/Content/avatar/avatar1.png" height="100px" width="100px" alt
@@ -232,7 +232,7 @@
                                     <div class="form-group">
                                         <label class="form-label">Stubble Condition</label>
                                         <select class="custom-select">
-                                        <option>Fresh</option> <option>Dried</option> <option>Processed</option> <option>Annually</option></select>
+                                        <option>Fresh</option> <option>Dried</option> <option>Processed</option> </select>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label">Quantity of Supply (in tons)</label>
