--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="left-image">
-                    <img src="assets/images/more-info.jpg" alt="">
+                    <img src="assets/images/more-info.png" alt="">
                   </div>
                 </div>
                 <div class="col-md-6 align-self-center">
