--- a/login_admin.html
+++ b/login_admin.html
@@ -161,7 +161,7 @@
                         <input type="password" class="form-control" id="password" placeholder="Password" required>
                     </div>
 
-                      <button type="submit" class="filled-button"><a href ="admin_dashboard">Login</a></button>
+                      <button type="submit" class="filled-button"><a href ="admin_dashboard.html">Login</a></button>
                   </form>
                   <!--<div class="text-center">
                       <a href="register.html">Don't have an account? Register</a>
