--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -119,9 +119,9 @@
         <div class="main-content">
             <div id="admin" class="section">
                 <div class="card-container">
-                    <a href="admin_registered_farmer.html" class="card">Registered Farmer</a>
-                    <a href="admin_registered_company.html" class="card">Registered Company</a>
-                    <a href="admin_registered_buyer.html" class="card">Registered Buyer</a>
+                    <a href="farmer_registered.html" class="card">Registered Farmer</a>
+                    <a href="company_registered.html" class="card">Registered Company</a>
+                    <a href="buyer_registered.html" class="card">Registered Buyer</a>
                     <a href="admin_profit.html" class="card">Profit</a>
                     <a href="admin_payment.html" class="card">Payment</a>
                     <a href="admin_stubble_stocks.html" class="card">Stubble Stocks</a>
