--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
+              <li><a class="nav-link" href="loginadmin.html">Admin</a></li>
               <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 10:00-16:00</a></li>
               <li><a href="#"><i class="fa fa-phone"></i>+91-817-190-8727</a></li>
             </ul>
