--- a/chatbot.html
+++ b/chatbot.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-finance-business.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-   <link rel="stylesheet" href="/assets/css/chatbot.css">
+   <link rel="stylesheet" href="assets/css/chatbot.css">
     
 
 
@@ -321,7 +321,7 @@
           });
       });
   </script>
-  <script src="/assets/js/chatbot.js"></script>
+  <script src="assets/js/chatbot.js"></script>
 
 </body>
 
