--- a/chatbot.html
+++ b/chatbot.html
@@ -135,7 +135,7 @@
     <div class="chatbotcontainer">
       <div class="chat-container">
         <div class="virtualassistant">
-          <h6 style="color: white;">Virtual Assistant</h6>
+          <h6 style="color: white;">EcoBot</h6>
         </div>
         <div id="chatbox">
           <div word-wrap: break-word; class="message bot-message">Heyy, Welcome to Ecoparali.</div>
