--- a/register.html
+++ b/register.html
@@ -75,7 +75,9 @@
 
     <header class="">
         <nav class="navbar navbar-expand-lg">
-            <img src="assets/images/ecobot.png" width="90px" height="100px" alt="" style="position: absolute; top:10px; bottom: 0; right: 0; animation: pulsate 2s ease-in-out infinite;">
+            <a href="chatbot.html">
+        <img src="assets/images/ecobot.png" width="90px" height="100px" alt="" style="position: absolute; top:10px; bottom: 0; right: 0; animation: pulsate 2s ease-in-out infinite;">
+        </a>
 
     <style>
         @keyframes pulsate {
