--- a/login.html
+++ b/login.html
@@ -84,8 +84,9 @@
     <header class="">
       
       <nav class="navbar navbar-expand-lg">
+        <a href="chatbot.html">
         <img src="assets/images/ecobot.png" width="90px" height="100px" alt="" style="position: absolute; top:10px; bottom: 0; right: 0; animation: pulsate 2s ease-in-out infinite;">
-
+        </a>
     <style>
         @keyframes pulsate {
             0% { transform: scale(1); }
