--- a/farmerprofile.html
+++ b/farmerprofile.html
@@ -59,7 +59,9 @@
     <header class="">
       
       <nav class="navbar navbar-expand-lg">
+        <a href="chatbot.html">
         <img src="assets/images/ecobot.png" width="90px" height="100px" alt="" style="position: absolute; top:10px; bottom: 0; right: 0; animation: pulsate 2s ease-in-out infinite;">
+        </a>
 
     <style>
         @keyframes pulsate {
