--- a/services.html
+++ b/services.html
@@ -220,7 +220,7 @@
                     <h6>Sustainable Agricultural Practices Promotion:</h6>
                   <p style="text-align:justify">We work with government agencies to promote sustainable agricultural practices, thereby contributing to 
                     national sustainability targets and enhancing rural development.</p>
-                    <br><br><a href="government.html" class="filled-button">Explore Policies</a>
+                    <br><br><a href="govtpolicies.html" class="filled-button">Explore Policies</a>
               </article>
               <article id='tabs-4'>
                 <img src="assets/images/s4.png" alt="">
@@ -243,7 +243,7 @@
                   <h6>Product Information and Education:</h6>
                   <p style="text-align:justify">We provide educational resources and information about the benefits of using eco-friendly products made 
                     from stubble. This helps consumers make informed choices and understand the positive impact of their purchases on the environment.</p>
-                    <br><a href="login.html" class="filled-button">Marketplace</a>
+                    <br><a href="marketplace.html" class="filled-button">Marketplace</a>
               </article>
             </section>
           </div>
