--- a/index.html
+++ b/index.html
@@ -402,6 +402,38 @@
         </div>
       </div>
     </div>
+    <div class="more-info">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="more-info-content">
+              <div class="row">
+                
+                <div class="col-md-6 align-self-center">
+                  <div class="right-content">
+                    <span>Ecological Contribution</span>
+                    <h2>Officially <em>Recognized</em></h2>
+                    <p style="text-align: justify;">We are proud to announce that EcoParali is officially patented, marking a significant 
+                      milestone in our journey towards sustainable agriculture. This patent recognizes the innovative and unique approach of
+                       our Smart Stubble Management System, which integrates technology to address the environmental challenges of stubble burning. 
+                       The patent not only validates the effectiveness and originality of EcoParali but also strengthens our commitment to transforming 
+                       agricultural practices. With this recognition, we are poised to lead the way in promoting eco-friendly solutions, reducing pollution,
+                        and empowering farmers across India.</p>
+                    <a href="about.html" class="filled-button">Read More</a>
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <div class="left-image">
+                    <img src="assets/images/PATENT.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="testimonials">
       <div class="container">
