--- a/govtpolicies.html
+++ b/govtpolicies.html
@@ -112,7 +112,7 @@
         <div class="row">
             <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); white-space: nowrap; overflow: hidden;">
                 <div style="display: inline-block; animation: scroll 10s linear infinite; font-weight: bold; color: red; font-size:20px;">
-                    Decoding the smog blanket over India. Every year, in October-November, pollution levels spike throughout the country.
+                    Decoding the smog blanket over India. Every year, in October-November, pollution levels spike throughout the country.<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </div>
             </div>
         
