--- a/login_admin.html
+++ b/login_admin.html
@@ -381,7 +381,7 @@
             var password = document.getElementById('password').value;
 
             // Check if the entered credentials match the admin credentials
-            if (userid === 'pioneers05' && password === 'ecoparali@05') {
+            if (userid === 'ecoparali' && password === 'password') {
                 // Redirect to admin dashboard if credentials are correct
                 window.location.href = 'admin_dashboard.html';
             } else {
