--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -144,6 +144,7 @@
             <div id="admin" class="section">
                 <div class="card-container">
                     <a href="farmer_registered.html" class="card">Registered Farmer</a>
+                    <a href="company_registered.php" class="card">Registered Company</a>
                     <a href="buyer_registered.html" class="card">Registered Buyer</a>
                     <a href="admin_profit.html" class="card">Profit</a>
                     <a href="admin_payment.html" class="card">Payment</a>
@@ -153,6 +154,7 @@
             <div id="farmer" class="section">
                 <div class="card-container">
                     <a href="farmer_registered.html" class="card">Registered Farmer</a>
+                    <a href="farmer_selling_history.php" class="card">Selling History</a>
                     <a href="farmer_stubble_availability.html" class="card">Stubble Availability</a>
                 </div>
                 <div class="table-container">
