--- a/register.html
+++ b/register.html
@@ -256,7 +256,7 @@
                                     <input type="text" class="form-control" id="product_sell" name="product_sell">
                                 </div>
                                 <div class="form-group">
-                                    <label for="quantity_sell">Quantity (in kg):</label>
+                                    <label for="quantity_sell">Quantity:</label>
                                     <input type="text" class="form-control" id="quantity_sell" name="quantity_sell">
                                 </div>
                             </div>
