--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@ https://templatemo.com/tm-545-finance-business
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
               <p>Got any queries? Feel free to send us an email to connect with us and bring a straw revolution.</p>
-              <a href="#">ecoparali@gmail.com</a>
+              <a href="#">paryavaranpioneers@gmail.com</a>
             </div>
           </div>
           <div class="col-md-4">
